Annotate the example config file

--- a/dcbot_example.conf
+++ b/dcbot_example.conf
@@ -1,5 +1,16 @@
+[global]
+# debug = true
+
 [connection]
 host = 127.0.0.1
 port = 7315
-nickname = RequestBot
-description = Ruby Request Bot
+nickname = DCBot
+description = DCBot
+
+# multiple connections are theoretically allowed
+# not yet implemented, but the architecture is in place
+#[connection]
+#host = otherhub.com
+#port = 1234
+#nickname = DCBot
+#description = Ruby Direct Connect Bot
